# Email_automation

./: README.md  pyproject.toml
config/: demo_distribution.json
data/: demo_ticket_plan_data.csv
email_automation/: __init__.py  cli.py  models.py  reporting.py
output/: 2026-03-19-bruins-vs-rangers_executive_attachment.html  2026-03-19-bruins-vs-rangers_golden_record.json  2026-03-21-bruins-vs-canadiens_executive_attachment.html  2026-03-21-bruins-vs-canadiens_golden_record.json  index.html
tests/: test_reporting.py
